@@ -1,49 +1,42 @@
 package ru.spellsofenglish.player.exception;
 
+import jakarta.validation.UnexpectedTypeException;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.ProblemDetail;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 
-import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @ControllerAdvice
 public class CustomErrorController {
-    private final DateTimeFormatter dateFormat = DateTimeFormatter.ofPattern("dd.MM.yyyy : hh.mm a");
-    @ExceptionHandler(MethodArgumentNotValidException.class)
+    @ExceptionHandler({MethodArgumentNotValidException.class, UnexpectedTypeException.class})
     public ResponseEntity<Map<String, List<String>>> handleValidationErrors(MethodArgumentNotValidException ex) {
-        List<String> errors = ex.getBindingResult()
-                .getFieldErrors()
-                .stream()
-                .map(FieldError::getDefaultMessage)
-                .collect(Collectors.toList());
-        return new ResponseEntity<>(getErrorsMap(errors), new HttpHeaders(), HttpStatus.BAD_REQUEST);
+        return new ResponseEntity<>(getErrorsMap(
+                ex.getBindingResult()
+                        .getFieldErrors()
+                        .stream()
+                        .map(FieldError::getDefaultMessage)
+                        .toList()),
+                new HttpHeaders(),
+                HttpStatus.BAD_REQUEST);
     }
     @ExceptionHandler({IllegalArgumentException.class})
-    public ResponseEntity<Object> handleNotFoundExceptions(Exception ex) {
+    public ProblemDetail handleNotFoundExceptions(Exception ex) {
         return buildErrorResponse(ex.getMessage());
     }
 
-    private ResponseEntity<Object> buildErrorResponse(String message) {
-        ErrorResponse errorResponse = new ErrorResponse();
-        errorResponse.setMessage(message);
-        errorResponse.setDateTimeError(LocalDateTime.now().format(dateFormat));
-        errorResponse.setStatus(HttpStatus.BAD_REQUEST.name());
-        return new ResponseEntity<>(errorResponse, HttpStatus.BAD_REQUEST);
+    private ProblemDetail buildErrorResponse(String message) {
+        return ProblemDetail.forStatusAndDetail(HttpStatus.BAD_REQUEST, message);
     }
 
     private Map<String, List<String>> getErrorsMap(List<String> errors) {
-        Map<String, List<String>> errorResponse = new HashMap<>();
-        errorResponse.put("message error", errors);
-        return errorResponse;
+        return Map.of("message error", errors);
     }
 
 
